2003-04-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ieee754/ldbl-96/e_gammal_r.c (__ieee754_gammal_r):
	Always initialize *signgamp before returning an error.

2003-04-05  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/i386/setcontext.S: Rewrite to avoid writing
	below the stack pointer even if switching to the same context we are
	running right now.

2003-04-05  Ulrich Drepper  <drepper@redhat.com>

	* catgets/gencat.c (read_input_file): Make sure that \n is not
	alone on the line before testing for continuation.

	* math/test-tgmath.c (compile_test): Initialize c.

2003-04-05  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/unix/sysv/linux/mips/mips64/n32/ftruncate64.c: New.
	* sysdeps/unix/sysv/linux/mips/mips64/n32/truncate64.c: New.
	* sysdeps/unix/sysv/linux/kernel-features.h: fcntl64 is available
	on mips n32.
	* sysdeps/unix/sysv/linux/mips/kernel_stat.h: Explain why
	XSTAT_IS_XSTAT64 must not be used for mips n64.  Use 64-bit data
	structure on n32 as well.
	* sysdeps/unix/sysv/linux/mips/bits/stat.h: Use POSIX-compliant
	data types on n32 and n64.

2003-04-05  Ulrich Drepper  <drepper@redhat.com>

	* libio/fileops.c (_IO_new_file_fopen): Don't free step data right
	after getting them.

	* malloc/thread-m.h [PTHREAD_MUTEX_INITIALIZER]: If
	HAVE_register_atfork_malloc is defined use __register_atfork_malloc
	instead of __register_atfork.

2003-04-05  Jakub Jelinek  <jakub@redhat.com>

	* stdio-common/reg-printf.c (__register_printf_function): Calloc
	instead of malloc __printf_arginfo_table and __printf_function_table.
	Reported by John Reiser <jreiser@BitWagon.com>.

2003-04-04  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/powerpc64/strchr.S: 64-bit optimizations.
	* sysdeps/powerpc/powerpc64/strlen.S: 64-bit optimizations.

	* sysdeps/powerpc/fpu/bits/mathdef.h (FLT_EVAL_METHOD): Undef before
	defining.

2003-04-04  Alexandre Oliva  <aoliva@redhat.com>
