@@ -1,5 +1,7 @@
 2003-04-05  Ulrich Drepper  <drepper@redhat.com>
 
+	* sunrpc/xdr.c (xdr_string): Catch nodesize == 0 [PR libc/4999].
+
 	* sysdeps/ieee754/ldbl-96/e_gammal_r.c (__ieee754_gammal_r):
 	Always initialize *signgamp before returning an error.
 
